sas-core/main/default/objects/LIA_Firm__c/LIA_Firm__c.object-meta.xml
<CustomObject>
    <label>Legal Firm</label>
    <nameField>
        <label>Legal Firm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Firms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>