sas-core/main/default/objects/LIA_Firm__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>Name of the bank</description>
    <inlineHelpText>Official Name of the Bank</inlineHelpText>
    <label>Bank Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>