sas-core/main/default/objects/LIA_Firm__c/fields/BIC__c.field-meta.xml
<CustomField>
    <fullName>BIC__c</fullName>
    <description>A BIC (Bank Identifier Code) is the SWIFT Address assigned to a bank in order to send automated payments quickly and accurately to the banks concerned. It uniquely identifies the name and country, (and sometimes the branch) of the bank involved.</description>
    <inlineHelpText>Bank Identifier Code</inlineHelpText>
    <label>BIC</label>
    <length>8</length>
    <type>Text</type>
</CustomField>