sas-core/main/default/objects/LIA_Firm__c/fields/Comments_About_Firm__c.field-meta.xml
<CustomField>
    <fullName>Comments_About_Firm__c</fullName>
    <label>Comments About Firm</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>