sas-core/main/default/objects/LIA_Firm__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country of the bank</description>
    <formula>LEFT(IBAN__c, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Bank&apos;s Country based on the IBAN number</inlineHelpText>
    <label>Country</label>
    <type>Text</type>
</CustomField>