sas-core/main/default/objects/LIA_Firm__c/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <description>An International Bank Account Number – or IBAN – is used worldwide to identify individual accounts. IBANs make it easier to process international payments</description>
    <inlineHelpText>International Bank Account Number</inlineHelpText>
    <label>IBAN</label>
    <length>18</length>
    <type>Text</type>
</CustomField>