sas-core/main/default/objects/LIA_Firm__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Firm&apos;s contact phone number</description>
    <inlineHelpText>Firm&apos;s contact phone number</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>